--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server __json_server_mock__/db.json --watch --port 2999",
+    "json-server": "json-server __json_server_mock__/db.json --watch --port 2999 --middlewares ./__json_server_mock__/middleware.js",
     "prepare": "husky install"
   },
   "eslintConfig": {
