--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "json-server": "json-server __json_server_mock__/db.json --watch --port 2999 --middlewares ./__json_server_mock__/middleware.js",
     "prepare": "husky install"
@@ -45,9 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.1.2",
     "@types/qs": "^6.9.5",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "antd": "^4.16.1",
+    "craco-less": "^1.17.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
