--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@typescript-eslint/parser": "^4.16.1",
     "antd": "^4.16.1",
     "craco-less": "^1.17.1",
+    "dayjs": "^1.10.5",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
