--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "gh-pages": "^3.2.0",
     "husky": "^6.0.0",
     "jira-dev-tool": "^1.6.59",
     "json-server": "^0.16.3",
